feat: refactor hero section with simplified animations and improved layout

--- a/html/index.html
+++ b/html/index.html
@@ -41,79 +41,53 @@
         <!-- Hero Section -->
         <div class="hero-section">
             <div class="hero-content">
-                <!-- Fast Food Text with Animation -->
-                <div class="fast-food-text">
-                    <div class="text-line">
-                        <span class="letter" data-delay="0">F</span>
-                        <span class="letter" data-delay="100">A</span>
-                        <span class="letter" data-delay="200">S</span>
-                        <span class="letter" data-delay="300">T</span>
+                <!-- FAST Text -->
+                <div class="fast-text">
+                    <span>F</span>
+                    <span>A</span>
+                    <span>S</span>
+                    <span>T</span>
+                </div>
+
+                <!-- FOOD Text with Side Text Container -->
+                <div class="food-side-container">
+                    <!-- FOOD Text with Eyes -->
+                    <div class="food-text">
+                        <span style="margin-right: 0.2em;">F</span>
+                        <span class="eye-letter">
+                            <span class="eye-text">O</span>
+                            <div class="eye-in-letter">
+                                <div class="eyeball-in-letter"></div>
+                            </div>
+                            <div class="cheek left-cheek"></div>
+                        </span>
+                        <span class="eye-letter">
+                            <span class="eye-text">O</span>
+                            <div class="eye-in-letter">
+                                <div class="eyeball-in-letter"></div>
+                            </div>
+                            <div class="cheek right-cheek"></div>
+                        </span>
+                        <span style="margin-left: 0.2em;">D</span>
+                        <!-- Smiley Mouth -->
+                        <div class="smiley-mouth"></div>
                     </div>
-                    <div class="text-line">
-                        <span class="letter" data-delay="400">F</span>
-                        <span class="letter" data-delay="500">O</span>
-                        <span class="letter" data-delay="600">O</span>
-                        <span class="letter" data-delay="700">D</span>
+
+                    <!-- Side Text -->
+                    <div class="side-text">
+                        <p>We appreciate your trust greatly.</p>
+                        <p>Our clients choose us and our products. Dicta sunt explicabo.</p>
                     </div>
                 </div>
 
-                <!-- Hamburger Image -->
-                <div class="hamburger-container">
-                    <img src="../assets/home_hamburger.jpg" alt="Delicious Burger" class="hamburger-img">
-                    
-                    <!-- Animated Eyes -->
-                    <div class="eyes-container">
-                        <div class="eye left-eye">
-                            <div class="eyeball"></div>
-                        </div>
-                        <div class="eye right-eye">
-                            <div class="eyeball"></div>
-                        </div>
-                        <div class="mouth"></div>
-                    </div>
-                </div>
-
-                <!-- Side Text -->
-                <div class="side-text">
-                    <p>We appreciate your trust greatly.<br>
-                    Our clients choose us and our<br>
-                    products. Dicta sunt explicabo.</p>
-                </div>
-
-                <!-- Bottom Text -->
-                <div class="bottom-text">
-                    <div class="emoji">😊</div>
+                <!-- Bottom Question -->
+                <div class="bottom-question">
+                    <span class="emoji">😊</span>
                     <span>WHAT DO YOU FEEL LIKE EATING TODAY?</span>
                 </div>
             </div>
         </div>
     </div>
-    
-    <!-- Content Section -->
-    <div class="content" id="content">
-        <div class="menu-section">
-            <h2>Our Delicious Menu</h2>
-            <div class="menu-items">
-                <div class="menu-item">
-                    <h3>🍔 Burgers</h3>
-                    <p>Gourmet burgers starting at just $8</p>
-                </div>
-                <div class="menu-item">
-                    <h3>🍟 French Fries</h3>
-                    <p>Crispy and golden fries</p>
-                </div>
-                <div class="menu-item">
-                    <h3>🍕 Pizza</h3>
-                    <p>Fresh and delicious pizzas</p>
-                </div>
-                <div class="menu-item">
-                    <h3>🥗 Salads</h3>
-                    <p>Healthy salads from $7</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <script src="../script/script.js"></script>
 </body>
 </html>
