--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="homepage">
@@ -41,42 +42,40 @@
         <!-- Hero Section -->
         <div class="hero-section">
             <div class="hero-content">
-                <!-- FAST Text -->
-                <div class="fast-text">
-                    <span>F</span>
-                    <span>A</span>
-                    <span>S</span>
-                    <span>T</span>
-                </div>
-
-                <!-- FOOD Text with Side Text Container -->
-                <div class="food-side-container">
-                    <!-- FOOD Text with Eyes -->
-                    <div class="food-text">
-                        <span style="margin-right: 0.2em;">F</span>
-                        <span class="eye-letter">
-                            <span class="eye-text">O</span>
-                            <div class="eye-in-letter">
-                                <div class="eyeball-in-letter"></div>
-                            </div>
-                            <div class="cheek left-cheek"></div>
-                        </span>
-                        <span class="eye-letter">
-                            <span class="eye-text">O</span>
-                            <div class="eye-in-letter">
-                                <div class="eyeball-in-letter"></div>
-                            </div>
-                            <div class="cheek right-cheek"></div>
-                        </span>
-                        <span style="margin-left: 0.2em;">D</span>
-                        <!-- Smiley Mouth -->
-                        <div class="smiley-mouth"></div>
+                <!-- Text Container -->
+                <div class="text-container">
+                    <!-- First Line: FAST Text -->
+                    <div class="first-line">
+                        <div class="fast-text">
+                            <span>F</span>
+                            <span>A</span>
+                            <span>S</span>
+                            <span>T</span>
+                        </div>
                     </div>
 
-                    <!-- Side Text -->
-                    <div class="side-text">
-                        <p>We appreciate your trust greatly.</p>
-                        <p>Our clients choose us and our products. Dicta sunt explicabo.</p>
+                    <!-- Second Line: FOOD Text -->
+                    <div class="second-line">
+                        <div class="food-text">
+                            <span style="margin-right: 0.2em;">F</span>
+                            <span class="eye-letter">
+                                <span class="eye-text">O</span>
+                                <div class="eye-in-letter">
+                                    <div class="eyeball-in-letter"></div>
+                                </div>
+                                <div class="cheek left-cheek"></div>
+                            </span>
+                            <span class="eye-letter">
+                                <span class="eye-text">O</span>
+                                <div class="eye-in-letter">
+                                    <div class="eyeball-in-letter"></div>
+                                </div>
+                                <div class="cheek right-cheek"></div>
+                            </span>
+                            <span style="margin-left: 0.2em;">D</span>
+                            <!-- Smiley Mouth -->
+                            <div class="smiley-mouth"></div>
+                        </div>
                     </div>
                 </div>
 
