feat(ui): enhance hero section with animations and responsive design
- Add letter-by-letter animation for "FAST FOOD" text
- Implement responsive design for mobile devices
- Add scrolling ticker for food categories
- Improve color scheme and spacing

--- a/html/index.html
+++ b/html/index.html
@@ -10,82 +10,111 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="homepage">
-        <!-- Navbar -->
-        <nav class="navbar" id="navbar">
-            <div class="container">
-                <div class="row">
-                    <div class="logo">
-                        <img src="../assets/logo-white-retina.png" alt="Elementra">
-                    </div>
-                    <div class="menu-social-container">
-                        <div class="menu">
-                            <a href="#">Home</a>
-                            <a href="#">About Us</a>
-                            <a href="#">Our Menu</a>
-                            <a href="#">Blog</a>
-                            <a href="#">Book Now</a>
+    <div class="main-section">
+        <div class="homepage">
+            <!-- Navbar -->
+            <nav class="navbar" id="navbar">
+                <div class="container">
+                    <div class="row">
+                        <div class="logo">
+                            <img src="../assets/logo-white-retina.png" alt="Elementra">
                         </div>
-                        <div class="social-icons">
-                            <a href="#" class="social-link">
-                                <i class="bi bi-twitter-x"></i>
-                            </a>
-                            <a href="#" class="social-link">
-                                <i class="bi bi-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-
-        <!-- Hero Section -->
-        <div class="hero-section">
-            <div class="hero-content">
-                <!-- Text Container -->
-                <div class="text-container">
-                    <!-- First Line: FAST Text -->
-                    <div class="first-line">
-                        <div class="fast-text">
-                            <span>F</span>
-                            <span>A</span>
-                            <span>S</span>
-                            <span>T</span>
-                        </div>
-                    </div>
-
-                    <!-- Second Line: FOOD Text -->
-                    <div class="second-line">
-                        <div class="food-text">
-                            <span style="margin-right: 0.2em;">F</span>
-                            <span class="eye-letter">
-                                <span class="eye-text">O</span>
-                                <div class="eye-in-letter">
-                                    <div class="eyeball-in-letter"></div>
-                                </div>
-                                <div class="cheek left-cheek"></div>
-                            </span>
-                            <span class="eye-letter">
-                                <span class="eye-text">O</span>
-                                <div class="eye-in-letter">
-                                    <div class="eyeball-in-letter"></div>
-                                </div>
-                                <div class="cheek right-cheek"></div>
-                            </span>
-                            <span style="margin-left: 0.2em;">D</span>
-                            <!-- Smiley Mouth -->
-                            <div class="smiley-mouth"></div>
+                        <div class="menu-social-container">
+                            <div class="menu">
+                                <a href="#">Home</a>
+                                <a href="#">About Us</a>
+                                <a href="#">Our Menu</a>
+                                <a href="#">Blog</a>
+                                <a href="#">Book Now</a>
+                            </div>
+                            <div class="social-icons">
+                                <a href="#" class="social-link">
+                                    <i class="bi bi-twitter-x"></i>
+                                </a>
+                                <a href="#" class="social-link">
+                                    <i class="bi bi-instagram"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </nav>
 
-                <!-- Bottom Question -->
-                <div class="bottom-question">
-                    <span class="emoji">😊</span>
-                    <span>WHAT DO YOU FEEL LIKE EATING TODAY?</span>
+            <!-- Hero Section -->
+            <div class="hero-section">
+                <div class="hero-content">
+                    <!-- Text Container -->
+                    <div class="text-container">
+                        <!-- First Line: FAST Text -->
+                        <div class="first-line">
+                            <div class="fast-text">
+                                <span class="letter-1">F</span>
+                                <span class="letter-2">A</span>
+                                <span class="letter-3">S</span>
+                                <span class="letter-4">T</span>
+                            </div>
+                        </div>
+
+                        <!-- Second Line: FOOD Text -->
+                        <div class="second-line">
+                            <!-- Description Text Above FOOD -->
+                            <div class="food-description">
+                                We appreciate your trust greatly.<br>
+                                Our clients choose us and our products.<br>
+                                Dicta sunt explicabo.
+                            </div>
+                            
+                            <div class="food-text">
+                                <span class="letter-5" style="margin-right: 0.2em;">F</span>
+                                <span class="eye-letter letter-6">
+                                    <span class="eye-text">O</span>
+                                    <div class="eye-in-letter">
+                                        <div class="eyeball-in-letter"></div>
+                                    </div>
+                                    <div class="cheek left-cheek"></div>
+                                </span>
+                                <span class="eye-letter letter-7">
+                                    <span class="eye-text">O</span>
+                                    <div class="eye-in-letter">
+                                        <div class="eyeball-in-letter"></div>
+                                    </div>
+                                    <div class="cheek right-cheek"></div>
+                                </span>
+                                <span class="letter-8" style="margin-left: 0.2em;">D</span>
+                                <!-- Smiley Mouth -->
+                                <div class="smiley-mouth"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Bottom Question -->
+                    <div class="bottom-question">
+                        <span class="emoji">😊</span>
+                        <span>WHAT DO YOU FEEL LIKE EATING TODAY?</span>
+                    </div>
                 </div>
             </div>
         </div>
+        
+        <!-- Scrolling Ticker -->
+        <div class="ticker-container">
+            <div class="ticker">
+                <div class="ticker-content">
+                    <span>🍕 PIZZA</span>
+                    <span>🌭 HOT DOGS</span>
+                    <span>🥗 SALADS</span>
+                    <span>🥤 DRINKS</span>
+                    <span>🍰 DESSERTS</span>
+                    <span>🌯 TORTILLAS</span>
+                    <span>🥙 SHAWARMA</span>
+                    <span>🍔 BURGERS</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <!-- Additional content can be added here -->
     </div>
     <script src="../script/script.js"></script>
 </body>
