feat(homepage): add content section and menu with animations
Implement responsive two-column layout for about section with animated transitions
Add menu section displaying popular dishes with staggered animations
Include responsive design adjustments for mobile devices

--- a/html/index.html
+++ b/html/index.html
@@ -114,8 +114,98 @@
     </div>
 
     <div class="content-section">
-        <!-- Additional content can be added here -->
+        <div class="content-row">
+            <div class="left-column">
+                <div class="text-content">
+                    <div class="section-header">
+                        <div class="quality-badge">DELICIOUS MEALS WITH QUALITY</div>
+                        <div class="decorative-lines">
+                            <div class="line"></div>
+                            <div class="line"></div>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <h2 class="about-title">FAST, RELIABLE AND MADE WITH LOVE</h2>
+                    <p class="about-description">
+                        Elementum is a fast food restaurant committed to delivering delicious, high-quality meals at affordable prices, ensuring that great taste.
+                    </p>
+                    <p class="about-mission">
+                        Our mission is to serve fresh, flavorful food that not only delights our customers but also supports a healthier planet. We are dedicated to promoting sustainability through responsible sourcing, reducing waste, and implementing eco-friendly practices.
+                    </p>
+                </div>
+                <div class="image-container">
+                    <div class="burger-image">
+                        <img src="../assets/home_hamburger.jpg" alt="Delicious burger">
+                    </div>
+                </div>
+            </div>
+            <div class="right-column">
+                <div class="image-container">
+                    <div class="hero-image">
+                        <img src="../assets/home_hamburger.jpg" alt="Delicious burger">
+                    </div>
+                </div>
+                <div class="text-content">
+                    <div class="feature-icon">
+                        <div class="burger-icon">
+                            <div class="burger-text">BURGERS</div>
+                            <div class="simple-face">
+                                <div class="face-eyes">
+                                    <div class="eye"></div>
+                                    <div class="eye"></div>
+                                </div>
+                                <div class="face-mouth"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="feature-description">
+                        We prioritize quality and sustainability, ensuring that every meal reflects our commitment to excellence. Founded in 2020, we have quickly become a go-to destination for families and individuals seeking satisfying meals.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!-- Menu Section -->
+    <div class="menu-section">
+        <div class="menu-container">
+            <div class="menu-header">
+                <div class="menu-badge">OUR MOST POPULAR DISHES</div>
+                <h2 class="menu-title">TASTE THE FLAVOR THAT WINS HEARTS</h2>
+            </div>
+            <div class="menu-grid">
+                <div class="menu-item">
+                    <div class="menu-image">
+                        <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                    </div>
+                    <h3 class="menu-item-title">GOURMET BURGERS</h3>
+                    <div class="menu-price">$26</div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-image">
+                        <img src="../assets/home_hamburger.jpg" alt="Fried Chicken">
+                    </div>
+                    <h3 class="menu-item-title">FRIED CHICKEN</h3>
+                    <div class="menu-price">$19</div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-image">
+                        <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                    </div>
+                    <h3 class="menu-item-title">GOURMET BURGERS</h3>
+                    <div class="menu-price">$12</div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-image">
+                        <img src="../assets/home_hamburger.jpg" alt="Healthy Salads">
+                    </div>
+                    <h3 class="menu-item-title">HEALTHY SALADS</h3>
+                    <div class="menu-price">$25</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="../script/script.js"></script>
 </body>
 </html>
