feat(homepage): add categories section with responsive design
Implement new categories section showcasing food types with text and image cards. Includes responsive layouts for different screen sizes and fade-in animations for better user experience.

--- a/html/index.html
+++ b/html/index.html
@@ -206,6 +206,89 @@
         </div>
     </div>
 
+    <!-- Categories Section -->
+    <div class="categories-section">
+        <div class="categories-container">
+            <div class="categories-header">
+                <h2 class="categories-title">CATEGORIES</h2>
+            </div>
+            <div class="categories-grid">
+                <!-- American Text Card -->
+                <div class="category-item text-card">
+                    <div class="category-content">
+                        <div class="category-text">
+                            <h3>AMERICAN: HOT DOGS, FRIES, NUGGETS</h3>
+                            <p>Explore our signature burgers, pizza, tacos and other delicious...</p>
+                            <a href="#" class="learn-more">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- American Image Card -->
+                <div class="category-item image-card">
+                    <div class="category-content">
+                        <div class="category-image">
+                            <img src="../assets/home_hamburger.jpg" alt="American Food">
+                        </div>
+                    </div>
+                </div>
+                <!-- Italian Text Card -->
+                <div class="category-item text-card">
+                    <div class="category-content">
+                        <div class="category-text">
+                            <h3>ITALIAN: PIZZA, PANINI, CALZONE</h3>
+                            <p>Explore our signature burgers, pizza, tacos and other delicious...</p>
+                            <a href="#" class="learn-more">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Italian Image Card -->
+                <div class="category-item image-card">
+                    <div class="category-content">
+                        <div class="category-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Italian Food">
+                        </div>
+                    </div>
+                </div>
+                <!-- Mexican Image Card -->
+                <div class="category-item image-card">
+                    <div class="category-content">
+                        <div class="category-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Mexican Food">
+                        </div>
+                    </div>
+                </div>
+                <!-- Mexican Text Card -->
+                <div class="category-item text-card">
+                    <div class="category-content">
+                        <div class="category-text">
+                            <h3>MEXICAN: TACOS, NACHOS, QUESADILLAS</h3>
+                            <p>Explore our signature burgers, pizza, tacos and other delicious...</p>
+                            <a href="#" class="learn-more">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Asian Image Card -->
+                <div class="category-item image-card">
+                    <div class="category-content">
+                        <div class="category-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Asian Food">
+                        </div>
+                    </div>
+                </div>
+                <!-- Asian Text Card -->
+                <div class="category-item text-card">
+                    <div class="category-content">
+                        <div class="category-text">
+                            <h3>ASIAN: SUSHI, ROLLS, NOODLES, FRIED RICE</h3>
+                            <p>Explore our signature burgers, pizza, tacos and other delicious...</p>
+                            <a href="#" class="learn-more">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="../script/script.js"></script>
 </body>
 </html>
