feat(homepage): add new menu section with responsive design
- Implement new menu section with detailed item display and pricing
- Add brand logos section with hover effects
- Include animated scrolling text banners for visual appeal
- Ensure responsive layout across all device sizes

--- a/html/index.html
+++ b/html/index.html
@@ -289,6 +289,128 @@
         </div>
     </div>
 
+    <!-- Menu Section 2 -->
+    <div class="menu-section">
+        <div class="menu-container">
+            <div class="menu-header">
+                <div class="menu-badge">NO WHITE TABLECLOTHS, NO WAITING - JUST</div>
+                <h2 class="menu-title">UNAPOLOGETICALLY DELICIOUS FOOD THAT HITS THE SPOT EVERY TIME.</h2>
+            </div>
+            <div class="menu-description-container">
+                <p class="menu-description">Enjoy gourmet burgers starting at just $8, healthy salads from $7, and our signature milkshakes for $5. We also offer combo deals for families, ensuring everyone can enjoy a satisfying meal without breaking the bank.</p>
+            </div>
+            <div class="menu-items-grid">
+                <div class="menu-row">
+                    <div class="menu-item-detailed">
+                        <div class="menu-item-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                        </div>
+                        <div class="menu-item-info">
+                            <h3 class="menu-item-name">GOURMET BURGERS</h3>
+                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                        </div>
+                        <div class="menu-item-price">$12</div>
+                    </div>
+                    <div class="menu-item-detailed">
+                        <div class="menu-item-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                        </div>
+                        <div class="menu-item-info">
+                            <h3 class="menu-item-name">GOURMET BURGERS</h3>
+                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                        </div>
+                        <div class="menu-item-price">$24</div>
+                    </div>
+                </div>
+                <div class="menu-row">
+                    <div class="menu-item-detailed">
+                        <div class="menu-item-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Healthy Panini">
+                        </div>
+                        <div class="menu-item-info">
+                            <h3 class="menu-item-name">HEALTHY PANINI</h3>
+                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                        </div>
+                        <div class="menu-item-price">$29</div>
+                    </div>
+                    <div class="menu-item-detailed">
+                        <div class="menu-item-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Hot Tacko">
+                        </div>
+                        <div class="menu-item-info">
+                            <h3 class="menu-item-name">HOT TACKO</h3>
+                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                        </div>
+                        <div class="menu-item-price">$32</div>
+                    </div>
+                </div>
+                <div class="menu-row">
+                    <div class="menu-item-detailed">
+                        <div class="menu-item-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Delicious Pasta">
+                        </div>
+                        <div class="menu-item-info">
+                            <h3 class="menu-item-name">DELICIOUS PASTA</h3>
+                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                        </div>
+                        <div class="menu-item-price">$19</div>
+                    </div>
+                    <div class="menu-item-detailed">
+                        <div class="menu-item-image">
+                            <img src="../assets/home_hamburger.jpg" alt="Chicken Nuggets">
+                        </div>
+                        <div class="menu-item-info">
+                            <h3 class="menu-item-name">CHICKEN NUGGETS</h3>
+                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                        </div>
+                        <div class="menu-item-price">$12</div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-button-container">
+                <button class="view-menu-btn">VIEW FULL MENU</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Brand Logos Section -->
+    <div class="brands-section">
+        <div class="brands-container">
+            <div class="brand-logo">
+                <img src="../assets/logo-white-retina.png" alt="Dr Pepper">
+            </div>
+            <div class="brand-logo">
+                <img src="../assets/logo-white-retina.png" alt="Heinz">
+            </div>
+            <div class="brand-logo">
+                <img src="../assets/logo-white-retina.png" alt="Coca Cola">
+            </div>
+            <div class="brand-logo">
+                <img src="../assets/logo-white-retina.png" alt="Hellmanns">
+            </div>
+            <div class="brand-logo">
+                <img src="../assets/logo-white-retina.png" alt="Pepsi">
+            </div>
+            <div class="brand-logo">
+                <img src="../assets/logo-white-retina.png" alt="Sprite">
+            </div>
+        </div>
+    </div>
+
+    <!-- Scrolling Text Banners -->
+    <div class="scrolling-banners">
+        <div class="banner banner-1">
+            <div class="banner-content">
+                <span>THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • </span>
+            </div>
+        </div>
+        <div class="banner banner-2">
+            <div class="banner-content">
+                <span>THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • </span>
+            </div>
+        </div>
+    </div>
+
     <script src="../script/script.js"></script>
 </body>
 </html>
